# spec-kitty

./: "${SPEC_KITTY_CMD_OUTPUT_FILE}"  .all-contributorsrc  .coverage  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  ADR_NAMING_UPDATED.md  ADR_RESTRUCTURING_FINAL.md  AGENTS.md  AGENT_NOTES.md  ARCHITECTURE_RESTRUCTURING_COMPLETE.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  HOW_TO_MAINTAIN.md  ISSUE_ANALYSIS.md  MANUAL_TEST_PLAN.md  MIGRATION-v0.10.0.md  Makefile  PHASE_2_DELIVERABLES.md  README.md  RELEASE_CHECKLIST.md  SCRIPT_IMPROVEMENTS_PHASE1.md  SUPPORT.md  T022-perf.txt  TEST_REPORT_005_REFACTOR_MISSION_SYSTEM.md  TEST_STATUS.md  UPGRADE_AGENT_DIRECTORY_RECREATION_ISSUE.md  WORKTREE_MODEL.md  WP01-research-findings.md  audit-report.cdx.json  commitlint.config.cjs  constraints.txt  fix-worktrees-to-sparse-checkout.sh  flake.nix  generate_pdf.py  gitignore_manager.py  (+14 more)
.auto-pr/: SPEC.md
.cursor/commands/: spec-kitty-standalone.md
.githooks/: pre-commit  pre-push
.github/: CHANGELOG.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement_request.md  idea_brainstorm.md
.github/workflows/: acceptance.yml  all-contributors-normalize.yml  all-contributors-sync.yml  canary-gate.yml  canonical-producer-lint.yml  check-spec-kitty-events-alignment.yml  ci-quality.yml  ci-windows.yml  docs-freshness.yml  docs-pages.yml  drift-detector.yml  nix-ci.yml  orchestrator-boundary.yml  plugin-validate.yml  protect-main.yml  release-readiness.yml  release.yml  teamspace-mission-state-readiness.yml  ui-e2e.yml
.kittify/: .dashboard  AGENTS.md  agent_profiles_manifest.json  command-skills-manifest.json  config.yaml  metadata.yaml  skills-manifest.json  sync-state.json
architecture/: 2026-04-14-windows-compatibility-hardening-mission-review.md  2026-04-14-windows-compatibility-hardening.md  ARCHITECTURE_DOCS_GUIDE.md  NAVIGATION_GUIDE.md  README.md  test-suite-acceleration-plan.md
contracts/: batch-api-contract.md
docs/: .gitignore  ARCHITECTURE.md  CNAME  README.md  WORKTREE_MODEL.md  claude-code-integration.md  claude-code-workflow.md  contextive-glossaries.md  docfx.json  documentation-mission.md  host-surface-parity.md  index.md  installation.md  kanban-dashboard-guide.md  llms.txt  local-development.md  p0-baseline-refresh.md  quickstart.md  retrospective-learning-loop.md  robots.txt  spec-workflow-automation.md  status-model.md  task-metadata-validation.md  testing-guidelines.md  toc.yml  trail-model.md
docs/1x/: index.html  (+10 more)
examples/: agency-client-demo.md  charter-driven-quality.md  claude-cursor-collaboration.md  constitution-driven-quality.md  dashboard-driven-development.md  multi-agent-feature-development.md  parallel-implementation-tracking.md  research-mission-example.md  solo-developer-workflow.md  worktree-parallel-features.md
glossary/: README.md  historical-terms.md  naming-decision-tool-vs-agent.md
kitty-ops/: 01KTKBH0CRS11VPX0Q0KNC8YK2.jsonl  01KTKBWR6WGSYJG2YA129HXNQ5.jsonl  01KTKN34JWF1Y2W5X4PDDRMX16.jsonl  01KTKN6Q03YH6AEF6HNQ1M7AR5.jsonl  01KTKP12QVFMQ3F690HXRDSWX8.jsonl  01KTTCEAF0WTVAHYGND1D16R68.jsonl  01KTZXZ7JZMFY7C9J6FH11F1D2.jsonl  01KV0B0PAVNRVC1N6HR6SZV0GN.jsonl  01KV0QNB6Q7E5ZS9PK2VYSZEHT.jsonl  01KV0ZBAEB1J95G06ZBHBEQJXP.jsonl  01KV0ZCTDW2Q3E767Q838V9R0K.jsonl  01KV0ZWBSTJ1514GVA9AQ6Z7JX.jsonl  01KV0ZWM0J46P9A0JJVQ4VMWE4.jsonl  01KV0ZWYF5W1RASXSF70QHQY18.jsonl  01KV4QGM4A430BVQ5DGYN2EAD0.jsonl  01KV4REKVGWYJAPA2K8JX2VP18.jsonl  01KV4RX2SP23BCJMNSS15WZ4NE.jsonl  01KV4SA9M220FQV51W8F4VZGZ4.jsonl  01KV4SRDBPTW34BB2N2H61RV2M.jsonl  01KV4TFZHFT7CDBKTYQZAC714H.jsonl  01KV4V27X6PRZH7G38FS2ER1ZT.jsonl  01KWKWQC58KWSN3VDCZ3VZB2GR.jsonl  01KWRMXPRF2QG23ZXHST6GF33H.jsonl  01KWRPHJCH29A4GDFPKEB54A11.jsonl  01KWY69QKZHF89VC2MNQTXQ18D.jsonl  01KWYN5BXSETGAJ53XR20VY550.jsonl  01KX9HT0884JMKPYX1V60PBV4Y.jsonl  01KX9HV7T3SGVPAW4A2YJZN5GM.jsonl  01KXAC5G04RVH5P9CDJ8MKKG69.jsonl  01KXAHJ9XBM0WF032958R9M6DM.jsonl  01KXAJTXH1WCV9NF8W5G0VSKJ9.jsonl  01KXAK147W6QYKKJAR8YJFDZW2.jsonl  01KXVYMH2RX8S37P1BPE42DV8Z.jsonl  01KXVYR6JSATXFE8WSW27K011T.jsonl  01KY0QAADWA0YXA3VGKXV1WVWA.jsonl  01KY1MQPBV4HKR2BHDJKX49PDC.jsonl  lifecycle.jsonl
research/: 01-claude-code.md  02-github-copilot.md  03-google-gemini.md  04-cursor.md  05-qwen-code.md  06-opencode.md  07-windsurf.md  08-github-codex.md  09-kilocode.md  10-augment-code.md  11-roo-cline.md  12-amazon-q.md  13-google-antigravity.md  data-model.md  research.md  tersifier-prose-compression.md
scripts/: canonical_producer_lint_baseline.txt  check_mutation_floor.py  check_nfr_003_latency.py  check_patch_targets.py  generate_contextive_glossaries.py  generate_schemas.py  lint_canonical_producers.py  measure-wp-prompt.py  prepare-mutmut-env.sh  snapshot_events_envelope.py  sort_glossary.py  sync_all_contributors.py  tersify_report.py  validate_encoding.py  verify_occurrences.py
templates/: plan-template.md  spec-template.md  task-prompt-template.md  tasks-template.md  vscode-settings.json
tests/: IMPLEMENTATION_COMPLETE.md  README.md  TESTING_PROGRESS.md  TESTING_REQUIREMENTS_ENCODING_AND_PLAN_VALIDATION.md  VENV_ISOLATION.md  _arch_shard_map.py  _next_shard_map.py  _real_port_suites.py  _shard_registry.py  branch_contract.py  conftest.py  conftest_saas_sink.py  lane_test_utils.py  manual_test_bug_117.py  mocked_env.py  mutmut_env.py  test_acceptance_parity.py  test_acceptance_support.py  test_dashboard_bug_117_lifecycle.py  test_dashboard_cli_accuracy.py  test_encoding_validation_cli.py  test_encoding_validation_functional.py  test_git_hook_bash_compat.py  test_gitignore_management.py  test_gitignore_manager_simple.py  test_isolation_helpers.py  test_manifest_filtering.py  test_package_bundling.py  test_packaging_safety.py  test_plan_validation_functional.py  test_shard_registry_fallback.py  test_tasks_cli_commands.py  test_template_compliance.py  test_venv_activation.py  test_version_detection.py  test_version_fallback.py  test_worker_home_isolation.py  utils.py
work/: notes.md
(+12795 files in other folders)
